--- a/src/calculadora.html
+++ b/src/calculadora.html
@@ -5,66 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-
-        }
-
-        .fundo {
-
-            background-image: linear-gradient(45deg, black, rgb(228, 12, 12));
-            height: 100vh;
-            color: aliceblue;
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-        }
-
-        .Calculadora {
-
-            position: absolute;
-            background-color: rgba(0, 0, 0.8);
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            border-radius: 15px;
-            padding: 15px;
-        }
-
-        .botão {
-
-
-            width: 50px;
-            height: 50px;
-            font-size: 25px;
-            cursor: pointer;
-            background-color: rgb(31, 31, 31);
-            color: white;
-            margin: 3px;
-        }
-
-        .botão:hover {
-
-
-            background-color: black;
-        }
-
-        #resultado {
-
-            width: 207px;
-            height: 30px;
-            margin: 5px;
-            background-color: white;
-            color: black;
-            text-align: right;
-            padding: 5px;
-        }
-    </style>
-
-
     <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Calculator</title>
+
+
+
 
 </head>
 
@@ -74,47 +19,47 @@
 
 
         <div class="Calculadora">
-            <h1> Calculadora</h1>
+            <h1> Calculator</h1>
             <p id="resultado"></p>
             <table>
                 <tr>
-                    <td><button class="botão">C</button></td>
-                    <td><button class="botão"><</button></td>
-                    <td><button class="botão">/</button></td>
-                    <td><button class="botão">X</button></td>
+                    <td><button class="botão" onclick="clean()">C</button></td>
+                    <td><button class="botão" onclick="back()" > < </button></td>
+                    <td><button class="botão" onclick="insert('/')">/</button></td>
+                    <td><button class="botão" onclick="insert('*')">x</button></td>
 
 
                 </tr>
                 <tr>
-                    <td><button class="botão">7</button></td>
-                    <td><button class="botão">8</button></td>
-                    <td><button class="botão">9</button></td>
-                    <td><button class="botão">-</button></td>
-
-
-                </tr>
-
-                <tr>
-                    <td><button class="botão">4</button></td>
-                    <td><button class="botão">5</button></td>
-                    <td><button class="botão">6</button></td>
-                    <td><button class="botão">+</button></td>
+                    <td><button class="botão" onclick="insert('7')">7</button></td>
+                    <td><button class="botão" onclick="insert('8')">8</button></td>
+                    <td><button class="botão" onclick="insert('9')">9</button></td>
+                    <td><button class="botão" onclick="insert('-')">-</button></td>
 
 
                 </tr>
 
                 <tr>
-                    <td><button class="botão">1</button></td>
-                    <td><button class="botão">2</button></td>
-                    <td><button class="botão">3</button></td>
-                    <td rowspan="2"><button class="botão" style="height:106px;">=</button></td>
+                    <td><button class="botão" onclick="insert('4')">4</button></td>
+                    <td><button class="botão" onclick="insert('5')">5</button></td>
+                    <td><button class="botão" onclick="insert('6')">6</button></td>
+                    <td><button class="botão" onclick="insert('+')">+</button></td>
+
+
+                </tr>
+
+                <tr>
+                    <td><button class="botão" onclick="insert('1')">1</button></td>
+                    <td><button class="botão" onclick="insert('2')">2</button></td>
+                    <td><button class="botão" onclick="insert('3')">3</button></td>
+                    <td rowspan="2"><button class="botão" style="height:106px;" onclick="calcular()">=</button></td>
 
 
 
                 </tr>
                 <tr>
-                    <td colspan="2"><button class="botão" style="width:106px ;">0</button></td>
-                    <td><button class="botão">.</button></td>
+                    <td colspan="2"><button class="botão" style="width:106px ;" onclick="insert('0')">0</button></td>
+                    <td><button class="botão" onclick="insert('.')">.</button></td>
                 </tr>
 
             </table>
@@ -130,5 +75,7 @@
 
 
 </body>
+
+<script src="index.js"></script>
 
 </html>
